objects/Business_Unit_Claim__c.object
<CustomObject>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Unit</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipLabel>Business Unit Claims</relationshipLabel>
        <relationshipName>Business_Unit_Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cluster_Function__c</fullName>
        <formula>Business_Unit__r.Cluster_Function__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster/Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matter__c</fullName>
        <label>Matter</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Business Unit Claims</relationshipLabel>
        <relationshipName>Business_Unit_Claims</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Portion_of_Claim__c</fullName>
        <label>Portion of Claim (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <formula>Business_Unit__r.Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_of_Claim__c</fullName>
        <formula>Matter__r.Matter_Value__c/Portion_of_Claim__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value of Claim</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Business Unit Claim</label>
    <nameField>
        <displayFormat>BUC-{0000}</displayFormat>
        <label>Identifier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Unit Claims</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>